updated swagger, file upload fixed, starting form, onclick prop to button, uncommented upload feature, browser decided content-type (need to test further), added createsighting and upload endpoints
